App layout views added, blocks to login & register *.pug files (+)
-------------------
[views/layout/index.pug]
    -this is the HTML main file.
    -link tag to "app.css" compiled stylesheet was added.
    -some tailwind styles were applied to: body, main.
    -block named "contenido" was created.

[controllers/usuarioController.js]
    - {..., pagina: "name"} sended to the "registro" view.

[views/auth/login.pug],
[views/auth/registro.pug]
    - extends from "../layout/index.pug" was added.
    - some tailwind styles were applied.

-------------------

--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -1,5 +1,8 @@
-div
-    if autenticated
-        h1 Usuario Autenticado
-    else
-        h1 Inicia sesión eee
+extends ../layout/index
+
+block contenido
+    div
+        if autenticated
+            h1 Usuario Autenticado
+        else
+            h2.text-center.text-2xl.font-extrabold Inicia sesión
