--- a/views/auth/registro.pug
+++ b/views/auth/registro.pug
@@ -1,2 +1,5 @@
-div
-    h1 Crea tu cuenta !
+extends ../layout/index
+
+block contenido
+    div
+        h2.text-center.text-2xl.font-extrabold=pagina
