--- a/views/auth/olvide-password.pug
+++ b/views/auth/olvide-password.pug
@@ -12,11 +12,8 @@ block contenido
                     div
                         label.block.text-sm.uppercase.text-gray-500.mb-3.font-bold(for="email") Email de Registro
                         input#email.w-full.px-3.py-2.border.border-indigo-300.rounded.placeholder-gray-400(placeholder="Tu Email" type="email" name="email")
-                    div
-                        label.block.text-sm.uppercase.text-gray-500.mb-3.font-bold(for="password") Password
-                        input#password.w-full.px-3.py-2.border.border-indigo-300.rounded.placeholder-gray-400(placeholder="Tu Password" type="password" name="password")
                     .flex.items-center.justify-between
                         a.text-gray-500.text-xs(href="/auth/registro") ¿No tienes cuenta? Crea una
-                        a.text-gray-500.text-xs(href="/auth/olvide-password") Olvidé mi Password
+                        a.text-gray-500.text-xs(href="/auth/login") ¿Ya tienes cuenta? Inicia Sesión
 
-                    input(class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 rounded cursor-pointer" type="submit" value="Iniciar Sesión")
+                    input(class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 rounded cursor-pointer" type="submit" value="Recuperar Cuenta")
